feat: Mejoras de UI/UX - Barra de navegación unificada, mejor contraste y rediseño de cards
- Unificar barra de navegación inferior en todas las activities usando layout compartido
- Agregar nuevos íconos personalizados (home, botiquín, settings)
- Actualizar colores de navegación a tonos grises más sutiles con fondo transparente
- Mover botones Guardar/Cancelar al pie del formulario en NuevaMedicinaActivity
- Agregar padding superior a headers para evitar solapamiento con barra de estado
- Mejorar contraste de texto en cards: gris oscuro (#333333) con tipografía más grande
- Rediseñar layout de cards de medicamentos ocasionales: botón grande a la derecha, Editar/Eliminar debajo
- Eliminar botón Salir del header de MainActivity
- Cambiar título a 'Tus medicamentos de hoy' en MainActivity
- Ajustar estilos de íconos y colores para mejor legibilidad

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,9 +22,10 @@
     <!-- Main Activity -->
     <string name="main_greeting">¡Hola, %s!</string>
     <string name="main_subtitle">Mantén tu tratamiento al día</string>
-    <string name="main_title">Medicamentos de hoy</string>
+    <string name="main_title">Tus medicamentos de hoy</string>
 
     <!-- Navigation -->
+    <string name="nav_home">Inicio</string>
     <string name="nav_new_medicine">Nueva\nMedicina</string>
     <string name="nav_medicine_cabinet">Botiquín</string>
     <string name="nav_history">Historial</string>
